--- a/src/app/DemoPages/Dashboards/gestion-utilisateurs/gestion-utilisateurs.component.html
+++ b/src/app/DemoPages/Dashboards/gestion-utilisateurs/gestion-utilisateurs.component.html
@@ -1,1 +1,151 @@
-<p>gestion-utilisateurs works!</p>
+<div class="app-page-title">
+    <div class="page-title-wrapper">
+        <div class="page-title-heading">
+            <div class="page-title-icon">
+                <i class="vsm-icon pe-7s-users"></i>
+            </div>
+            <div>
+                <h2>Liste <b>Utilisateurs</b></h2>
+            <div class="page-title-subheading">
+                </div>
+            </div>
+
+        </div>
+    </div>
+</div>
+<div class="main-card mb-3 card"> 
+    <div class="card-header">
+        <div class="card-header-title font-size-lg text-capitalize font-weight-normal">
+          Nos utilisateurs
+        </div>
+        <div class="btn-actions-pane-right">
+          <button type="button" class="btn-shadow d-inline-flex align-items-center btn btn-success"
+          (click)="triggerModal(modalData)">
+            <br>
+            <div><i class="material-icons">&#xE147;</i>
+            </div>
+            Ajouter un Nouveau Utilisateur
+          </button>
+        </div>
+      </div>
+    <div class="table-responsive">
+        <table class="table table-striped table-hover">
+            <thead>
+                <tr>
+                    <th>
+          
+                    </th>
+                    <th class="text-center">ID</th>
+                    <th class="text-center">Nom</th>
+                    <th class="text-center">Prenom</th>
+                    <th class="text-center">Adresse</th>
+                    <th class="text-center">Email</th>
+                    <th class="text-center">Département</th>
+                    <th class="text-center">Action</th>
+                </tr>       
+            </thead>
+            <tbody>
+                <tr *ngFor="let utilisateurs of utilisateurs">         
+                   <td>
+                        <!-- <span class="custom-checkbox">
+                            <input type="checkbox" id="checkbox5" name="options[]" value="1">
+                            <label for="checkbox5"></label>
+                        </span> -->
+                    </td>
+                    <td class="text-center">{{utilisateurs.id}}</td>
+                    <td class="text-center">{{utilisateurs.nom}}</td>
+                    <td class="text-center" style="width: 100px;">{{utilisateurs.prenom}}</td>
+                    <td class="text-center">{{utilisateurs.adresse}}</td>
+                    <td class="text-center">{{utilisateurs.email}}</td>
+                    <td class="text-center"></td>
+                    <td class="text-center">
+                        <button class="btn-icon btn-icon-only btn-shadow btn btn-outline-success" (click)="triggerModalupdate(modalupdate,utilisateurs.id)">
+                            <i _ngcontent-serverapp-c235="" class="lnr-highlight btn-icon-wrapper"></i>
+                        </button>
+                        <button class="btn-icon btn-icon-only btn-shadow btn btn-outline-danger" (click)="supprimerutilisateur(utilisateurs.id)">
+                            <i _ngcontent-serverapp-c235="" class="lnr-trash btn-icon-wrapper"></i>
+                        </button>
+                    </td>
+                </tr> 
+            </tbody>
+        </table>
+    </div>
+    <br>
+
+</div>
+<ng-template #modalData let-modal >
+    <div class="modal-header">
+      <h4 class="modal-title" id="modal-basic-title">Ajout d'un département</h4>
+      <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+        <span aria-hidden="true">×</span>
+      </button>
+    </div>
+    <div class="modal-body">
+      <form [formGroup]="this.form">
+        <div class="position-relative form-group">
+          <label for="examplegroupe">Nom</label>
+          <input formControlName="nom" name="nom" type="text" placeholder="votre nom" class="form-control" >
+        </div>   
+        <div class="position-relative form-group">
+            <label for="examplegroupe">Prénom</label>
+            <input formControlName="prenom" name="prenom" type="text" placeholder="Votre prénom" class="form-control" >
+        </div>   
+        <div class="position-relative form-group">
+            <label for="examplegroupe">Adresse</label>
+            <input formControlName="adresse" name="adresse" type="text" placeholder="Votre adresse" class="form-control" >
+        </div> 
+        <div class="position-relative form-group">
+            <label for="examplegroupe">Email</label>
+            <input formControlName="email" name="email" type="text" placeholder="Votre email." class="form-control" >
+        </div> 
+        <div>
+            <label> Choisir un Département:  </label>
+            <ng-select [items]="departements" (change) = "onSelectChange($event)" change bindLabel="name" placeholder="Select city" >
+            </ng-select>
+        </div>
+
+    <div class="modal-footer">
+      <button type="button" class="btn btn-danger" (click)="modal.close('Save click')">Close</button>
+      <button type="button" (click)="onSubmit()" (click)="modal.close('Save click')" class="btn btn-success" [disabled]="!form.valid">Ajouter</button>
+    </div>
+  </form> 
+  </div>
+  </ng-template>
+<ng-template #modalupdate let-modal >
+    <div class="modal-header" >
+      <h4 class="modal-title" id="modal-basic-title">Modification d'un utilisateur</h4>
+      <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+        <span aria-hidden="true">×</span>
+      </button>
+    </div>
+    <div class="modal-body">
+      <form [formGroup]="updateForm">
+        <div class="position-relative form-group">
+          <label for="examplegroupe">Nom</label>
+          <input formControlName="nom" type="text"  class="form-control" id="nom"  >
+        </div>   
+        <div class="position-relative form-group">
+            <label for="examplegroupe">Prénom</label>
+            <input formControlName="prenom"  type="text" class="form-control" id="prenom" >
+        </div>   
+        <div class="position-relative form-group">
+            <label for="examplegroupe">Adresse</label>
+            <input formControlName="adresse"  type="text"  class="form-control" id="adresse" >
+        </div> 
+        <div class="position-relative form-group">
+            <label for="examplegroupe">Email</label>
+            <input formControlName="email" type="email" class="form-control" id="email" >
+        </div> 
+        <div>
+            <label> Choisir un Département:  </label>
+            <ng-select [items]="departements" (change) = "onSelectChange($event)" change bindLabel="name" placeholder="Select department" >
+            </ng-select>
+        </div>
+
+    <div class="modal-footer" >
+      <button type="button" class="btn btn-danger" (click)="modal.close('Save click')">Close</button>
+      <button type="button" (click)="updateutilisateur()" (click)="modal.close('Save click')" class="btn btn-success" >Enregistrer</button>
+    </div>
+  </form> 
+  </div>
+  </ng-template>
