--- a/src/app/DemoPages/Dashboards/historique/historique.component.html
+++ b/src/app/DemoPages/Dashboards/historique/historique.component.html
@@ -5,16 +5,10 @@
                 <i class="vsm-icon pe-7s-phone"></i>
             </div>
             <div>
-                <h2>Nom <b>Terminal</b></h2>
+                <h2>Historique <b>Terminaux</b></h2>
             <div class="page-title-subheading">
                 </div>
             </div>
-        </div>
-        <div style="color: #fff; font-size: 13px; outline: none !important; border-radius: 2px; border: none; min-width: 50px; outline: none !important;" class="page-title-actions">
-            <a  (click)="triggerModal(modalData)" class="btn btn-danger" data-toggle="modal">
-                <i  class="material-icons" style="float: left; font-size: 21px; margin-right: 5px;">&#xE15C;</i>
-                <span>Effacer Etat</span></a>
-
         </div>
         <div id="deleteEmployeeModal" class="modal fade">
             <div class="modal-dialog">
@@ -59,17 +53,61 @@
     <ng-select [items]="terminals" (change) = "onSelectChange($event)" change bindLabel="name" placeholder="Select city" >
     </ng-select>
 </div>
+<div class="row" > 
+    <div class="col-md-6 col-lg-4">Début:
+    <form class="form-inline">
+      <div class="form-group">
+        <div class="input-group">
+          <input class="form-control" placeholder="yyyy-mm-dd" name="dp" [(ngModel)]="model3" ngbDatepicker
+            [footerTemplate]="footerTemplate" #d3="ngbDatepicker">
+          <div class="input-group-append">
+            <button class="btn btn-outline-secondary calendar" (click)="d3.toggle()" type="button">
+              <i class="fa fa-calendar"></i>
+            </button>
+          </div>
+        </div>
+      </div>
+    </form>
+    <ng-template #footerTemplate>
+      <hr class="my-0">
+      <button class="btn btn-primary btn-sm m-2 float-left" (click)="model3 = today; d3.close()">Today</button>
+      <button class="btn btn-secondary btn-sm m-2 float-right" (click)="d3.close()">Close</button>
+    </ng-template>
+    </div>
+    <div class="col-md-6 col-lg-4"> Fin:
+        <form class="form-inline">
+          <div class="form-group">
+            <div class="input-group">
+              <input class="form-control" placeholder="yyyy-mm-dd" name="dp2" [(ngModel)]="model3" ngbDatepicker
+                [footerTemplate]="footerTemplate2" #d3="ngbDatepicker">
+              <div class="input-group-append">
+                <button class="btn btn-outline-secondary calendar" (click)="d3.toggle()" type="button">
+                  <i class="fa fa-calendar"></i>
+                </button>
+              </div>
+            </div>
+          </div>
+        </form>
+        <ng-template #footerTemplate2>
+          <hr class="my-0">
+          <button class="btn btn-primary btn-sm m-2 float-left" (click)="model3 = today; d3.close()">Today</button>
+          <button class="btn btn-secondary btn-sm m-2 float-right" (click)="d3.close()">Close</button>
+        </ng-template>
+    </div>
+    <div class="col-md-2 col-lg-4">
+        <button type="button" class="btn-shadow btn btn-success">
+            Valider 
+        </button>
+    </div>
+</div>
 <div class="main-card mb-3 card">
     <div class="card-header">
-        Etats des terminals
+        Consulter tous les états
     </div>
     <div class="table-responsive">
         <table class="table table-striped table-hover">
             <thead>
                 <tr>
-                    <th>
-                        
-                    </th>
                     <th class="text-center">Nom de l'Appareil</th>
                     <th class="text-center">Version Système</th>
                     <th class="text-center">Etat de batterie</th>
@@ -77,24 +115,14 @@
                     <th class="text-center">Modèle</th>
                     <th class="text-center">Android_Id</th>
                     <th class="text-center">Date et Heure</th>
-                </tr>
-                
+                </tr>    
             </thead>
             <tbody>
-                <tr *ngFor="let terminaux of FiltredTerminaux">
-
-                   
-                    <td>
-                        <span class="custom-checkbox">
-                            <input type="checkbox" id="checkbox5" name="options[]" value="1">
-                            <label for="checkbox5"></label>
-                        </span>
-                    </td>
+                <tr *ngFor="let terminaux of FiltredTerminaux">                
                     <td class="text-center">
                         <div class="widget-content p-0">
                             <div class="widget-content-wrapper">
                                 <div class="widget-content-left mr-3">
-
                                 </div>
                                 <div class="widget-content-left flex2">
                                     <div class="widget-heading"> {{terminaux.Modele}}</div>
@@ -131,5 +159,4 @@
         </table>
     </div>
     <br>
-
 </div>
